<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">REL ORDER</string>
    <string name="action_settings">Settings</string>
    <string name="img_content_desc" translatable="false">REL ORDER</string>
    <string name="btn_content_desc" translatable="false">REL ORDER</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string-array name="navigation_section">
        <item>REL Operation</item>
        <item>Stock Statement</item>
        <item>Customer Outstanding</item>
    </string-array>
    <string-array name="temp_customer_list">
        <item>Customer 1</item>
        <item>Customer 2</item>
        <item>Customer 3</item>
        <item>Customer 4</item>
        <item>Customer 5</item>
        <item>Customer 6</item>
        <item>Customer 7</item>
        <item>Customer 8</item>
        <item>Customer 9</item>
        <item>Customer 10</item>
        <item>Customer 11</item>
        <item>Customer 12</item>
        <item>Customer 13</item>
        <item>Customer 14</item>
        <item>Customer 15</item>
        <item>Customer 16</item>
        <item>Customer 17</item>
        <item>Customer 18</item>
        <item>Customer 19</item>
        <item>Customer 20</item>
    </string-array>

    <string name="action_refresh">Refresh</string>
    <string name="action_logout">LogOut</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_new_order">NewOrderActivity</string>
    <string name="hello_world">Hello world!</string>

    <string name="tbl_label_customer_name">Customer Name</string>
    <string name="tbl_label_town">Town</string>
    <string name="tbl_label_outstanding">Outstanding Amount</string>

    <string name="tbl_label_agency_name">Agency Name</string>
    <string name="tbl_label_brand_name">Brand Name</string>
    <string name="tbl_label_product_name">Product Name</string>
    <string name="tbl_label_batch_no">Batch No</string>
    <string name="tbl_label_stock">In Stock / Allocated</string>

    <string name="tbl_label_new_order_product">Product</string>
    <string name="tbl_label_new_order_batch">Batch</string>
    <string name="tbl_label_new_order_qty">Qty</string>
    <string name="tbl_label_new_order_price">Price</string>
    <string name="tbl_label_new_order_disc">Disc</string>
    <string name="tbl_label_new_order_fi">FI</string>
    <string name="tbl_label_new_order_value">Value</string>

    <string name="tbl_label_gross_value">Gross value</string>
    <string name="tbl_label_overall_dis">Overall Discount (%)</string>
    <string name="tbl_label_discount_value">Discount Value</string>
    <string name="tbl_label_order_value">Order Value</string>
    <string name="title_activity_list_of_order">ListOfOrderActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_view_order">ViewOrderActivity</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="section_new_order">New Order</string>
    <string name="section_order_list">List of orders</string>
    <string name="section_order_view">View Orders</string>
    <string name="section_sales_return">Sales Returns</string>
    <string name="section_view_return">View Returns</string>

</resources>